fix contact form alignment

--- a/css/common.css
+++ b/css/common.css
@@ -294,7 +294,7 @@ input{
 }
 textarea{
 	width:100%;
-	height:130px;
+	height:100px;
 }
 
 #contact input, #contact textarea{
